WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
144049
[Mac] Device picker menu is positioned incorrectly in WK1
https://bugs.webkit.org/show_bug.cgi?id=144049
Summary
[Mac] Device picker menu is positioned incorrectly in WK1
Eric Carlson
Reported
2015-04-22 10:24:50 PDT
The device picker menu is not positioned correctly in WK1
Attachments
Proposed patch.
(1.53 KB, patch)
2015-04-22 14:52 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2015-04-22 10:25:21 PDT
<
rdar://problem/20493101
>
Eric Carlson
Comment 2
2015-04-22 14:52:38 PDT
Created
attachment 251371
[details]
Proposed patch.
WebKit Commit Bot
Comment 3
2015-04-22 15:44:50 PDT
Comment on
attachment 251371
[details]
Proposed patch. Clearing flags on attachment: 251371 Committed
r183147
: <
http://trac.webkit.org/changeset/183147
>
WebKit Commit Bot
Comment 4
2015-04-22 15:44:52 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug