[Mac] Device picker menu is positioned incorrectly in WK1 https://bugs.webkit.org/show_bug.cgi?id=144049 <rdar://problem/20493101>

Reviewed by Dean Jackson.

* WebView/WebView.mm:
(-[WebView _showPlaybackTargetPicker:location:hasVideo:]): Mouse location is already in
    window coordinates so don't call convertRect:toView:nil.


Canonical link: https://commits.webkit.org/162032@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183147 268f45cc-cd09-0410-ab3c-d52691b4dbfc